feat: change text disconnect confirm dialog

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Etwas ist schief gelaufen. Bitte laden Sie die App neu.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "Mehr erfahren",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace-Einstellungen wurden gespeichert",
   "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "Sind Sie sicher, dass Sie die Verbindung zu ONLYOFFICE DocSpace unterbrechen wollen? Dies hat zur Folge, dass alle Verbindungen zwischen Deals und DocSpace-Räumen verloren gehen. Außerdem werden alle Benutzerautorisierungsdaten gelöscht.",
+  "settings.connection.disconnection.description": "",
   "settings.connection.disconnection.ok": "Verbindung zu ONLYOFFICE DocSpace erfolgreich unterbrochen",
   "settings.connection.disconnection.error": "Die Verbindung zu ONLYOFFICE DocSpace konnte nicht unterbrochen werden.",
   "settings.connection.title": "Konfigurieren Sie die Verbindungseinstellungen der ONLYOFFICE DocSpace-App",
