--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Un problème s'est produit. Veuillez recharger l'application.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "En savoir plus",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Les paramètres d'ONLYOFFICE DocSpace ont été sauvegardés",
   "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "Souhaitez-vous déconnecter ONLYOFFICE DocSpace ? Cela entraînera la perte de toutes les connexions entre Deals et les salles DocSpace. De plus, toutes les données d'autorisation de l'utilisateur seront supprimées",
+  "settings.connection.disconnection.description": "",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace a été déconnecté avec succès",
   "settings.connection.disconnection.error": "Impossible de déconnecter ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurez les paramètres de connexion de l'application ONLYOFFICE DocSpace",
