--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Qualcosa è andato storto. Ricarica l'app.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "Per saperne di più",
   "room.creating.ok": "La stanza virtuale ONLYOFFICE DocSpace è stata creata con successo!",
   "room.creating.error": "Impossibile creare la stanza ONLYOFFICE DocSpace!",
@@ -65,9 +66,9 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_OWNER_IS_NOT_ADMIN": "",
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Le impostazioni di ONLYOFFICE DocSpace sono state salvate",
-  "settings.connection.disconnection.description": "Sei sicuro di voler disconnettere ONLYOFFICE DocSpace? Questo comporterà la perdita di tutte le connessioni tra Deals e le stanze DocSpace. Inoltre, tutti i dati di autorizzazione utente saranno eliminati.",
-  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
   "settings.connection.status.connected": "",
+  "settings.connection.disconnection.description": "",
+  "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace disconnesso con successo",
   "settings.connection.disconnection.error": "Impossibile disconnettere ONLYOFFICE DocSpace",
   "settings.connection.title": "Configura le impostazioni di connessione dell'app ONLYOFFICE DocSpace",
   "settings.connection.subtitle.connect": "Collega il tuo ONLYOFFICE DocSpace a Pipedrive",
