--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -42,6 +42,7 @@
   "error.common": "何か問題が発生しました。アプリを再読み込みしてください。",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "詳しくはこちら",
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace設定が保存されました",
   "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "ONLYOFFICE DocSpaceの接続を切断してもよろしいですか? これは、DealsとDocSpaceルーム間のすべての接続が失われることを意味します。また、すべてのユーザー認証データも削除されます。",
+  "settings.connection.disconnection.description": "",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpaceの切断に成功しました",
   "settings.connection.disconnection.error": "ONLYOFFICE DocSpaceの切断に失敗しました",
   "settings.connection.title": "ONLYOFFICE DocSpaceアプリの接続設定を確認してください",
