--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Algo deu errado. Recarregue o aplicativo.",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "Saiba mais",
   "room.creating.ok": "A sala ONLYOFFICE DocSpace foi criada com sucesso!",
   "room.creating.error": "Falha ao criar a sala ONLYOFFICE DocSpace!",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "As configurações do ONLYOFFICE DocSpace foram salvas",
   "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "Tem certeza de que deseja desconectar ONLYOFFICE DocSpace? Isso resultará na perda de todas as conexões entre as salas Deals e DocSpace. E também todos os dados de autorização do usuário serão excluídos.",
+  "settings.connection.disconnection.description": "",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace desconectado com sucesso",
   "settings.connection.disconnection.error": "Não foi possível desconectar o ONLYOFFICE DocSpace",
   "settings.connection.title": "Configurar as configurações de conexão do aplicativo ONLYOFFICE DocSpace",
