--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Something went wrong. Please reload the app.",
   "error.empty-field": "Please fill out this field",
   "error.incorrect-docspace-address": "Incorrect DocSpace address, please try again",
+  "label.warning": "Warning",
   "link.learn-more": "Learn more",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "Invalid API key. Please check the Access Scopes for API key in DocSpace and try to connect again.",
   "settings.connection.saving.ok": "ONLYOFFICE DocSpace settings have been saved",
   "settings.connection.status.connected": "Your DocSpace has been successfully connected",
-  "settings.connection.disconnection.description": "Are you sure you want to disconnect ONLYOFFICE DocSpace? This will result in all connections between Deals and DocSpace rooms being lost. And also all user authorization data will be deleted.",
+  "settings.connection.disconnection.description": "If you press the Disconnect button, you will not have access to ONLYOFFICE DocSpace. This will remove the connections between Rooms and Deals, and disconnect all users.",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace succesfully disconnected",
   "settings.connection.disconnection.error": "Could not disconnect ONLYOFFICE DocSpace",
   "settings.connection.title": "Configure connection settings of the ONLYOFFICE DocSpace app",
