--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -42,6 +42,7 @@
   "error.common": "Что-то пошло не так. Пожалуйста, перезагрузите приложение",
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
+  "label.warning": "",
   "link.learn-more": "Узнать больше",
   "room.creating.ok": "Комната ONLYOFFICE DocSpace успешно создана!",
   "room.creating.error": "Не удалось создать комнату ONLYOFFICE DocSpace!",
@@ -66,7 +67,7 @@
   "settings.connection.saving.error.DOCSPACE_API_KEY_IS_NOT_CONTAINS_REQUIRED_SCOPES": "",
   "settings.connection.saving.ok": "Настройки ONLYOFFICE DocSpace сохранены",
   "settings.connection.status.connected": "",
-  "settings.connection.disconnection.description": "Вы уверены, что хотите отключить ONLYOFFICE DocSpace? Это приведет к потере всех соединений между сделками и комнатами DocSpace. Также будут удалены все данные авторизации пользователей",
+  "settings.connection.disconnection.description": "",
   "settings.connection.disconnection.ok": "ONLYOFFICE DocSpace успешно отключен",
   "settings.connection.disconnection.error": "Не удалось отключить ONLYOFFICE DocSpace",
   "settings.connection.title": "Настройте подключение приложения ONLYOFFICE DocSpace",
