feat: change text for login message in room page

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -53,7 +53,7 @@
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
   "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die mit diesem Deal verbunden sind. Sie können den Raumtyp nicht ändern.",
-  "room.login.description": "Melden Sie sich bei ONLYOFFICE DocSpace an, um gemeinsam an den Deal-Dokumenten zu arbeiten.",
+  "room.login.description": "",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
