--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -53,7 +53,7 @@
   "room.creating.ok": "ONLYOFFICE DocSpace ルームが正常に作成されました！",
   "room.creating.error": "ONLYOFFICE DocSpace ルームの作成に失敗しました！",
   "room.create.description": "この案件に関連するドキュメントを扱うためにONLYOFFICE DocSpaceルームを作成してください。ルームタイプを変更することはできませんので、ご注意ください。",
-  "room.login.description": "ONLYOFFICE DocSpaceにログインして、取引関連のドキュメントを簡単に共同編集できます。",
+  "room.login.description": "",
   "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
