feat: change text for create room on pages/Room/index.tsx

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -61,10 +61,10 @@
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
   "label.warning": "",
-  "link.learn-more": "Mehr erfahren",
+  "link.learn-more-room-types": "",
   "room.creating.ok": "ONLYOFFICE DocSpace Raum wurde erfolgreich erstellt!",
   "room.creating.error": "ONLYOFFICE DocSpace Raum konnte nicht erstellt werden!",
-  "room.create.description": "Erstellen Sie einen ONLYOFFICE DocSpace-Raum, um mit Dokumenten zu arbeiten, die mit diesem Deal verbunden sind. Sie können den Raumtyp nicht ändern.",
+  "room.create.description": "",
   "room.login.description": "",
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
