--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -61,10 +61,10 @@
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
   "label.warning": "",
-  "link.learn-more": "Más información",
+  "link.learn-more-room-types": "",
   "room.creating.ok": "¡La sala de ONLYOFFICE DocSpace se ha creado correctamente!",
   "room.creating.error": "¡Error al crear la sala de ONLYOFFICE DocSpace!",
-  "room.create.description": "Cree una sala de ONLYOFFICE DocSpace para trabajar con documentos relacionados con este acuerdo. No podrá cambiar el tipo de sala.",
+  "room.create.description": "",
   "room.login.description": "",
   "room.request-access.ok": "Se le ha concedido correctamente el acceso a la sala de ONLYOFFICE DocSpace",
   "room.request-access.error": "Error al acceder a la sala de ONLYOFFICE DocSpace",
