--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -61,10 +61,10 @@
   "error.empty-field": "",
   "error.incorrect-docspace-address": "",
   "label.warning": "",
-  "link.learn-more": "En savoir plus",
+  "link.learn-more-room-types": "",
   "room.creating.ok": "La salle d'ONLYOFFICE DocSpace a été créée avec succès !",
   "room.creating.error": "Échec de la création de la salle d'ONLYOFFICE DocSpace !",
-  "room.create.description": "Créez une salle ONLYOFFICE DocSpace pour travailler avec les documents liés à cette affaire. Vous ne pourrez pas modifier le type de salle.",
+  "room.create.description": "",
   "room.login.description": "",
   "room.request-access.ok": "L'accès à la salle d'ONLYOFFICE DocSpace vous a été accordé avec succès",
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
