--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -61,10 +61,10 @@
   "error.empty-field": "Please fill out this field",
   "error.incorrect-docspace-address": "Incorrect DocSpace address, please try again",
   "label.warning": "Warning",
-  "link.learn-more": "Learn more",
+  "link.learn-more-room-types": "Learn more about room types.",
   "room.creating.ok": "ONLYOFFICE DocSpace room was successfully created!",
   "room.creating.error": "Failed to create ONLYOFFICE DocSpace room!",
-  "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal. You will not be able to change the room type.",
+  "room.create.description": "Create ONLYOFFICE DocSpace room to work with documents related to this deal.",
   "room.login.description": "Login to ONLYOFFICE DocSpace to easily collaborate on documents in this deal",
   "room.request-access.ok": "You have been successfully granted access to the ONLYOFFICE DocSpace room",
   "room.request-access.error": "Error getting access to the ONLYOFFICE DocSpace room",
